@@ -222,9 +222,7 @@ public class SLDImporter {
 
         try {
             LinkedList<Element> elems = getElements("//sld:UserStyle/sld:FeatureTypeStyle"
-                    + "[count(sld:Rule)=(count(sld:Rule/ogc:Filter/ogc:PropertyIsBetween)+"
-                    + "count(sld:Rule/ogc:Filter/ogc:PropertyIsEqualTo))]/sld:Name", doc.getDocumentElement(),
-                    NSCONTEXT);
+                    + "[count(sld:Rule/ogc:Filter) > 0]/sld:Name", doc.getDocumentElement(), NSCONTEXT);
             for (Element e : elems) {
                 list.add(e.getTextContent());
             }
@@ -696,9 +694,8 @@ public class SLDImporter {
     public static ColorThemingStyle getColorThemingStyle(String name, Document doc) {
         try {
             Element featureTypeStyle = getElement("//sld:UserStyle/sld:FeatureTypeStyle"
-                    + "[count(sld:Rule)=(count(sld:Rule/ogc:Filter/ogc:PropertyIsBetween)+"
-                    + "count(sld:Rule/ogc:Filter/ogc:PropertyIsEqualTo)) and sld:Name='" + name + "']", doc
-                    .getDocumentElement(), NSCONTEXT);
+                    + "[(count(sld:Rule/ogc:Filter) > 0) and sld:Name='" + name + "']", doc.getDocumentElement(),
+                    NSCONTEXT);
 
             if (featureTypeStyle == null) {
                 return null;
